data/derived/fa15/progs/unify/prog2947.ml.out
Characters 119-146:
  | Cosine e	  -> Cosine(pi *. eval(e, x, y))
                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
